tests/baselines/reference/fuzzy.errors.txt
fuzzy.ts(13,18): error TS2137: Class C declares interface I but does not implement it:
	Type 'C' is missing property 'alsoWorks' from type 'I'.
fuzzy.ts(21,20): error TS2012: Cannot convert '{ anything: number; oneI: C; }' to 'R':
	Types of property 'oneI' of types '{ anything: number; oneI: C; }' and 'R' are incompatible:
		Type 'C' is missing property 'alsoWorks' from type 'I'.
fuzzy.ts(25,20): error TS2012: Cannot convert '{ oneI: C; }' to 'R':
	Type '{ oneI: C; }' is missing property 'anything' from type 'R'.
	Types of property 'oneI' of types 'R' and '{ oneI: C; }' are incompatible:
		Type 'I' is missing property 'x' from type 'C'.
